<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="160dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/shoe_picture"
                android:src="@drawable/running_shoes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stepCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/zero"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/today_steps"
                app:layout_constraintEnd_toEndOf="@+id/stepCountTV"
                app:layout_constraintStart_toStartOf="@+id/stepCountTV"
                app:layout_constraintTop_toBottomOf="@+id/stepCountTV" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/distanceCV"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/distance_icon"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/overpass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distanceValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distanceUnitTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/meter"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@+id/distanceValueTV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distanceTodayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_s_distance_covered"
                android:textSize="16sp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@+id/distanceValueTV"
                app:layout_constraintTop_toBottomOf="@id/distanceValueTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calorieCV"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceCV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/distance_icon"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/caloriestv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caloriesValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caloriesTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/calories_burnt"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@+id/caloriesValueTV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caloriesTodayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_s_burnt_calories"
                android:textSize="16sp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@+id/caloriesValueTV"
                app:layout_constraintTop_toBottomOf="@id/caloriesValueTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/moreCV"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:translationY="120dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/custom1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/moreTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/more"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/statistics"
                android:src="@drawable/data"
                app:layout_constraintEnd_toEndOf="@+id/moreTV"
                app:layout_constraintStart_toStartOf="@+id/moreTV"
                app:layout_constraintTop_toBottomOf="@+id/moreTV" />

            <TextView
                android:id="@+id/statisticsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/statistics"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"/>


            <ImageView
                android:id="@+id/resetPedometerIV"
                android:contentDescription="@string/reset_statistics_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/trash_can"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/imageView4"
                app:layout_constraintStart_toStartOf="@id/imageView4"
                app:layout_constraintEnd_toEndOf="@id/imageView4"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reset_pedometer_data"
                android:textColor="@color/materialRed1"
                app:layout_constraintStart_toStartOf="@id/statisticsTV"
                app:layout_constraintTop_toTopOf="@id/resetPedometerIV"
                app:layout_constraintBottom_toBottomOf="@id/resetPedometerIV"

                />





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
